--- a/packages/disact/package.json
+++ b/packages/disact/package.json
@@ -42,10 +42,15 @@
     "lint": "biome check ./src"
   },
   "devDependencies": {
-    "@monorepo/tsconfig": "workspace:*"
+    "@monorepo/tsconfig": "workspace:*",
+    "@types/mdast": "^4.0.4"
   },
   "keywords": [],
   "author": "elecdeer",
   "packageManager": "pnpm@9.1.2+sha256.19c17528f9ca20bd442e4ca42f00f1b9808a9cb419383cd04ba32ef19322aba7",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "mdast-util-gfm-strikethrough": "^2.0.0",
+    "mdast-util-to-markdown": "^2.1.0"
+  }
 }
