--- a/packages/disact/tsconfig.json
+++ b/packages/disact/tsconfig.json
@@ -3,6 +3,7 @@
 	"include": ["src"],
 	"compilerOptions": {
 		"rootDir": ".",
-		"baseUrl": "src"
+		"baseUrl": "src",
+		"jsx": "react-jsx"
 	}
 }
