--- a/packages/disact/package.json
+++ b/packages/disact/package.json
@@ -44,7 +44,8 @@
   "devDependencies": {
     "@monorepo/tsconfig": "workspace:*",
     "@types/mdast": "^4.0.4",
-    "ts-dedent": "^2.2.0"
+    "ts-dedent": "^2.2.0",
+    "@types/node": "^20.14.12"
   },
   "keywords": [],
   "author": "elecdeer",
