--- a/packages/disact-engine/package.json
+++ b/packages/disact-engine/package.json
@@ -24,8 +24,8 @@
   },
   "devDependencies": {
     "@monorepo/tsconfig": "workspace:*",
-    "ts-dedent": "^2.2.0",
-    "@types/node": "^20.14.12"
+    "@types/node": "~22.18.6",
+    "ts-dedent": "^2.2.0"
   },
   "keywords": [],
   "author": "elecdeer",
