chore: 依存関係をカタログ形式に更新

--- a/packages/disact/package.json
+++ b/packages/disact/package.json
@@ -43,15 +43,15 @@
   },
   "devDependencies": {
     "@monorepo/tsconfig": "workspace:*",
-    "@types/mdast": "^4.0.4",
-    "@types/node": "~22.18.6",
-    "ts-dedent": "^2.2.0"
+    "@types/mdast": "catalog:",
+    "@types/node": "catalog:",
+    "ts-dedent": "catalog:"
   },
   "keywords": [],
   "author": "elecdeer",
   "license": "MIT",
   "dependencies": {
-    "mdast-util-gfm-strikethrough": "^2.0.0",
-    "mdast-util-to-markdown": "^2.1.2"
+    "mdast-util-gfm-strikethrough": "catalog:",
+    "mdast-util-to-markdown": "catalog:"
   }
 }
