--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "license": "MIT",
   "packageManager": "pnpm@9.11.0+sha256.1c0e33f70e5df9eede84a357bdfa0b1f9dba6e58194628d48a1055756f553754",
   "devDependencies": {
-    "@biomejs/biome": "2.2.4",
-    "tsup": "^8.5.0",
-    "turbo": "^2.5.6",
-    "typescript": "^5.9.2",
-    "vitest": "^3.2.4"
+    "@biomejs/biome": "catalog:",
+    "tsup": "catalog:",
+    "turbo": "catalog:",
+    "typescript": "catalog:",
+    "vitest": "catalog:"
   }
 }
