--- a/packages/example/basic/package.json
+++ b/packages/example/basic/package.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {
     "@monorepo/tsconfig": "workspace:*",
-    "vite-node": "^3.2.4"
+    "vite-node": "catalog:"
   },
   "keywords": [],
   "author": "elecdeer",
