--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,3 +3,16 @@ packages:
   - "packages/disact-engine"
   - "packages/example/*"
   - "packages/tsconfig"
+
+catalog:
+  "@biomejs/biome": "2.2.4"
+  "@types/mdast": "^4.0.4"
+  "@types/node": "~22.18.6"
+  "mdast-util-gfm-strikethrough": "^2.0.0"
+  "mdast-util-to-markdown": "^2.1.2"
+  "ts-dedent": "^2.2.0"
+  "tsup": "^8.5.0"
+  "turbo": "^2.5.6"
+  "typescript": "^5.9.2"
+  "vite-node": "^3.2.4"
+  "vitest": "^3.2.4"
