chore: update Biome設定ファイルのスキーマと設定を最新バージョンに更新

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,24 @@
 {
-	"editor.defaultFormatter": "biomejs.biome",
-	"cSpell.words": ["disact", "Mdast"],
-	"[typescript]": {
-		"editor.defaultFormatter": "biomejs.biome"
-	},
-	"[typescriptreact]": {
-		"editor.defaultFormatter": "biomejs.biome"
-	},
-	"typescript.preferences.importModuleSpecifier": "project-relative",
-	"javascript.preferences.importModuleSpecifier": "project-relative",
-	"biome.lsp.bin": {
-		"linux-x64": "./node_modules/bin/biome",
-		"linux-arm64-musl": "./node_modules/bin/biome",
-		"darwin-arm64": "./node_modules/bin/biome",
-		"win32-x64": "./node_modules/bin/biome"
-	}
+  "editor.defaultFormatter": "biomejs.biome",
+  "cSpell.words": ["disact", "Mdast"],
+  "[typescript]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "typescript.preferences.importModuleSpecifier": "project-relative",
+  "javascript.preferences.importModuleSpecifier": "project-relative",
+  "biome.lsp.bin": {
+    "linux-x64": "./node_modules/bin/biome",
+    "linux-arm64-musl": "./node_modules/bin/biome",
+    "darwin-arm64": "./node_modules/bin/biome",
+    "win32-x64": "./node_modules/bin/biome"
+  }
 }
