chore: add tsconfig.json for disact-engine package

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,8 @@
     "linux-arm64-musl": "./node_modules/bin/biome",
     "darwin-arm64": "./node_modules/bin/biome",
     "win32-x64": "./node_modules/bin/biome"
+  },
+  "editor.codeActionsOnSave": {
+    "source.fixAll.biome": "explicit"
   }
 }
