--- a/packages/disact/package.json
+++ b/packages/disact/package.json
@@ -56,6 +56,7 @@
     "@disact/engine": "workspace:*",
     "mdast-util-gfm-strikethrough": "catalog:",
     "mdast-util-to-markdown": "catalog:",
+    "type-fest": "^5.1.0",
     "zod": "^4.1.12"
   }
 }
