refactor: replace custom API types with discord-api-types
- Remove type-fest UndefinedOnPartialDeep in favor of removeUndefined utility
- Replace custom generated API types with discord-api-types standard types
- Update all component elements to use ComponentType enum
- Add removeUndefined utility function for optional property handling
- Remove orval configuration and generated API models
- Improve type safety with exact discord-api-types interfaces

--- a/packages/disact-engine/package.json
+++ b/packages/disact-engine/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "build": "tsup",
     "lint": "biome check ./src",
-    "test": "vitest"
+    "test": "vitest --project disact-engine run"
   },
   "devDependencies": {
     "@monorepo/tsconfig": "workspace:*",
