--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "turbo build",
     "lint": "pnpm exec biome check",
-    "lint:fix": "pnpm exec biome check --write"
+    "lint:fix": "pnpm exec biome check --write",
+    "test": "vitest run"
   },
   "keywords": [],
   "author": "elecdeer",
