--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "disact-monorepo",
-  "private": true,
   "version": "1.0.0",
+  "private": true,
   "description": "",
+  "keywords": [],
+  "license": "MIT",
+  "author": "elecdeer",
   "main": "index.js",
   "scripts": {
     "build": "turbo build",
@@ -12,10 +15,6 @@
     "lint:fix": "pnpm exec biome check --write",
     "test": "vitest run"
   },
-  "keywords": [],
-  "author": "elecdeer",
-  "license": "MIT",
-  "packageManager": "pnpm@9.11.0+sha256.1c0e33f70e5df9eede84a357bdfa0b1f9dba6e58194628d48a1055756f553754",
   "devDependencies": {
     "@biomejs/biome": "catalog:",
     "oxfmt": "catalog:",
@@ -23,5 +22,6 @@
     "turbo": "catalog:",
     "typescript": "catalog:",
     "vitest": "catalog:"
-  }
+  },
+  "packageManager": "pnpm@9.11.0+sha256.1c0e33f70e5df9eede84a357bdfa0b1f9dba6e58194628d48a1055756f553754"
 }
