--- a/packages/example/basic/package.json
+++ b/packages/example/basic/package.json
@@ -1,8 +1,11 @@
 {
   "name": "example-basic",
-  "private": true,
   "version": "1.0.0",
+  "private": true,
   "description": "",
+  "keywords": [],
+  "license": "MIT",
+  "author": "elecdeer",
   "type": "module",
   "main": "./dist/index.js",
   "scripts": {
@@ -12,17 +15,14 @@
     "dev": "vite-node ./src/index.tsx"
   },
   "dependencies": {
-    "disact": "workspace:*",
-    "hono": "^4.6.14",
     "@hono/node-server": "^1.13.7",
+    "disact": "workspace:*",
+    "discord-api-types": "^0.38.31",
     "discord-interactions": "^4.1.0",
-    "discord-api-types": "^0.38.31"
+    "hono": "^4.6.14"
   },
   "devDependencies": {
     "@monorepo/tsconfig": "workspace:*",
     "vite-node": "catalog:"
-  },
-  "keywords": [],
-  "author": "elecdeer",
-  "license": "MIT"
+  }
 }
