--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -18,3 +18,5 @@ catalog:
   "vite-node": "^3.2.4"
   "vitest": "^4.0.6"
   "oxfmt": "^0.19.0"
+  "oxlint": "^1.34.0"
+  "oxlint-tsgolint": "^0.10.0"
