--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,6 @@
 {
   "editor.defaultFormatter": "oxc.oxc-vscode",
-  "cSpell.words": [
-    "crossposted",
-    "disact",
-    "Mdast",
-    "oxfmt",
-    "oxlint"
-  ],
+  "cSpell.words": ["crossposted", "disact", "Mdast", "oxfmt", "oxlint"],
   "typescript.preferences.importModuleSpecifier": "project-relative",
   "javascript.preferences.importModuleSpecifier": "project-relative",
   "editor.codeActionsOnSave": {
@@ -24,5 +18,5 @@
   },
   "[jsonc]": {
     "editor.defaultFormatter": "oxc.oxc-vscode"
-  },
+  }
 }
