--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -9,6 +9,7 @@ catalog:
   "@logtape/pretty": "^1.3.5"
   "@types/mdast": "^4.0.4"
   "@types/node": "~22.18.6"
+  "lefthook": "^1.10.1"
   "mdast-util-gfm-strikethrough": "^2.0.0"
   "mdast-util-to-markdown": "^2.1.2"
   "orval": "^7.3.0"
